// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox alt 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 18px;
  height: 18px;
  cursor: pointer;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  display: none;
}

input:checked:not(:disabled) ~ .c4 {
  display: block;
}

.c8 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c7 {
  display: block;
}

.c12 {
  display: none;
}

input:checked:disabled ~ .c11 {
  display: block;
}

.c10 {
  display: none;
}

input:disabled:not(:checked) ~ .c9 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c4 c5 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#6A88F2"
      height="15"
      rx="4"
      ry="4"
      stroke="#6A88F2"
      width="15"
      x="0.5"
      y="0.5"
    />
    <path
      d="M 5,8 L 7,10 L 12,5"
      stroke="white"
      strokeLinecap="round"
      strokeWidth="1.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c7 c8 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="15"
      rx="4"
      ry="4"
      stroke="#C1CCD0"
      width="15"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c9 c10 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#EFF2F3"
      height="15"
      rx="4"
      ry="4"
      stroke="#EFF2F3"
      width="15"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c11 c12 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#EFF2F3"
      height="15"
      rx="4"
      ry="4"
      stroke="#EFF2F3"
      width="15"
      x="0.5"
      y="0.5"
    />
    <path
      d="M 5,8 L 7,10 L 12,5"
      stroke="#C1CCD0"
      strokeLinecap="round"
      strokeWidth="1.5"
    />
  </svg>
</div>
`;

exports[`Checkbox default 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 18px;
  height: 18px;
  cursor: pointer;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  display: none;
}

input:checked:not(:disabled) ~ .c4 {
  display: block;
}

.c8 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c7 {
  display: block;
}

.c12 {
  display: none;
}

input:checked:disabled ~ .c11 {
  display: block;
}

.c10 {
  display: none;
}

input:disabled:not(:checked) ~ .c9 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c4 c5 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#6A88F2"
      height="15"
      rx="4"
      ry="4"
      stroke="#6A88F2"
      width="15"
      x="0.5"
      y="0.5"
    />
    <path
      d="M 5,8 L 7,10 L 12,5"
      stroke="white"
      strokeLinecap="round"
      strokeWidth="1.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c7 c8 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="white"
      height="15"
      rx="4"
      ry="4"
      stroke="#C1CCD0"
      width="15"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c9 c10 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#EFF2F3"
      height="15"
      rx="4"
      ry="4"
      stroke="#EFF2F3"
      width="15"
      x="0.5"
      y="0.5"
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c11 c12 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#EFF2F3"
      height="15"
      rx="4"
      ry="4"
      stroke="#EFF2F3"
      width="15"
      x="0.5"
      y="0.5"
    />
    <path
      d="M 5,8 L 7,10 L 12,5"
      stroke="#C1CCD0"
      strokeLinecap="round"
      strokeWidth="1.5"
    />
  </svg>
</div>
`;

exports[`Checkbox isChecked 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 18px;
  height: 18px;
  cursor: pointer;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 20px;
  height: 20px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c0 c4"
    fill="none"
    height={20}
    viewBox="0 0 16 16"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#6A88F2"
      height="15"
      rx="4"
      ry="4"
      stroke="#6A88F2"
      width="15"
      x="0.5"
      y="0.5"
    />
    <path
      d="M 5,8 L 7,10 L 12,5"
      stroke="white"
      strokeLinecap="round"
      strokeWidth="1.5"
    />
  </svg>
</div>
`;
